# rust_openssl_lambda

./: Cargo.toml  memo.txt
src/: main.rs
