[package]
name = "rust_openssl_lambda"
version = "0.1.0"
authors = ["techno-tanoC <develop.tanoc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
simple-error = "*"
reqwest = "*"
openssl = { version = "0.10", features = ["vendored"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
